# paper-optical-theorem

./: .gitignore  1_preparation.ipynb  1_prepation.ipynb  2_optical_theorem.ipynb  3_data_processing.ipynb  4_experiment.ipynb  README.md  pyproject.toml
comsol/: comsol_helmholtz_pw_scattering_example.ipynb  comsol_helmholtz_scattering_example.ipynb  comsol_helmholtz_scattering_work_in_process.ipynb  comsol_helmholtz_sw_scattering_example copy.ipynb  comsol_sphere_scattering_example.ipynb
data/helmholtz_experiment/models/: p_b_model.pt  y_model.pt
data/helmholtz_pw_comsol/: script.py  sigma.csv
data/helmholtz_sw_comsol/: script.py
data/helmholtz_sw_comsol/models/: p_b_model.pt  y_model.pt
data/sphere_comsol/: script.py  sigma.csv
data/sphere_theory/models/: p_b_model.pt  y_model.pt
src/comsol/: helmholtz_pw_scattering.py  helmholtz_sw_scattering.py  patch.py  sphere_scattering.py
src/mie_utils/: __init__.py  fields.py
src/processing/: __init__.py  data.py  models.py
tests/: test_comsol_sphere_scattering.csv  test_mie_utils.py
