[project]
name = "paper_optical_theorem"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "scipy>=1.16.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
comsol = [
    "mph>=1.2.4",
]
dev = [
    "black[jupyter]>=25.9.0",
    "nbconvert>=7.16.6",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
